# ithil

./: .air.toml  .gitignore  .goreleaser.yaml  .rustfmt.toml  CHANGELOG.md  CHANGELOG_MEDIA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FULLSCREEN_FIX.md  IMAGE_QUALITY_FIX.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MEDIAVIEWER_FIX.md  MEDIA_SUPPORT.md  MULTIMEDIA_IMPLEMENTATION_PLAN.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PUBLISHING.md  README.md  TEST_MEDIAVIEWER.md  clear-session.sh  config.example.yaml  go.mod  go.sum  test_credentials.go
.github/workflows/: ci.yml  release.yml  rust-ci.yml  rust-release.yml
.opencode/agent/: rust-ratatui-specialist.md
cmd/ithil/: main.go
docs/: FOCUS_FIX.md  MEDIA_QUICK_START.md  MEDIA_RENDERING.md
internal/app/: app.go  config.go  config_test.go  credentials.go
internal/cache/: INTEGRATION_GUIDE.md  MEDIA_CACHE_README.md  MEDIA_CACHE_SUMMARY.md  cache.go  cache_test.go  media_cache.go  media_cache_example_test.go  media_cache_test.go
internal/media/: IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  THUMBNAIL_README.md  audio_player.go  audio_player_cgo.go  audio_player_stub.go  audio_renderer.go  image_renderer.go  kitty_renderer.go  mosaic_renderer.go  protocol_detector.go  sixel_renderer.go  thumbnail_example.go  thumbnail_generator.go  thumbnail_generator_test.go
internal/telegram/: DOWNLOAD_PROGRESS.md  auth.go  chats.go  chats_test.go  client.go  media.go  messages.go  messages_test.go  session.go  updates.go
internal/utils/: formatting.go  formatting_test.go  time.go  time_test.go
src/: lib.rs  main.rs
(+59 files in other folders)
